--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
     text-align: right;
     font-size: 60px;
     font-weight: 800;
-    background-color: rgb(183, 174, 163);
+    width: 500px;
+    overflow-x: scroll;
 }
 
 #buttons > button {
