--- a/style.css
+++ b/style.css
@@ -5,12 +5,46 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+#mode{
+    width: 500px;
+    display:grid;
+    grid-template-columns: auto auto;
+}
+
+#mode > button{
+    font-size: medium;
+    color: #ccc;
+    background-color:rgba(5, 8, 8, 0.546)
+}
+
+#blank{
+    text-align: right;
+    font-size: 30px;
+    font-weight: 300;
+    height: 50px;
+    width: 500px;
+}
+
 #display{
     text-align: right;
     font-size: 60px;
     font-weight: 800;
     width: 500px;
     overflow-x: scroll;
+}
+
+.scrollable {
+    height: 150px;
+    overflow-x: scroll;
+}
+  
+.scrollable::-webkit-scrollbar {
+    width: 8px;
+    background-color: #f5f5f5;
+}
+  
+.scrollable::-webkit-scrollbar-thumb {
+    background-color: #ccc;
 }
 
 #buttons > button {
